--- a/app/globals.css
+++ b/app/globals.css
@@ -23,3 +23,37 @@
   scrollbar-width: none;
   -ms-overflow-style: none;
 }
+
+.dark_scroll::-webkit-scrollbar {
+  width: 3px;
+}
+
+.dark_scroll::-webkit-scrollbar-track {
+  background-color: #282828;
+}
+
+.dark_scroll::-webkit-scrollbar-thumb {
+  background-color: #eeeeee;
+  border-radius: 3px;
+}
+
+.dark_scroll::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+.light_scroll::-webkit-scrollbar {
+  width: 3px;
+}
+
+.light_scroll::-webkit-scrollbar-track {
+  background-color: #e8e8e8;
+}
+
+.light_scroll::-webkit-scrollbar-thumb {
+  background-color: #646464;
+  border-radius: 3px;
+}
+
+.light_scroll::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
